// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withInternalSorting tests change rows from props 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div
          style="padding-right: 15px; position: relative;"
        >
          number 
          <span
            class="sort-asc"
            style="width: 0px; height: 0px; border-left: 5px solid transparent; border-right: 5px solid transparent; border-bottom: 5px solid gray; position: absolute; margin-left: 5px;"
          />
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 140px;"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 120px;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align: right; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div
          style="padding-right: 15px;"
        >
          took_office
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="width: 80px;"
      >
        1
      </td>
      <td
        style="width: 140px;"
      >
        George Washington
      </td>
      <td
        style="width: 120px;"
      >
        No Party
      </td>
      <td
        style="width: 80px;"
      >
        1732
      </td>
      <td
        style="width: 80px;"
      >
        1799
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1789-04-30
      </td>
      <td
        style="width: 80px;"
      >
        1797-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        2
      </td>
      <td
        style="width: 140px;"
      >
        John Adams
      </td>
      <td
        style="width: 120px;"
      >
        Federalist
      </td>
      <td
        style="width: 80px;"
      >
        1735
      </td>
      <td
        style="width: 80px;"
      >
        1826
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1797-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1801-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        3
      </td>
      <td
        style="width: 140px;"
      >
        Thomas Jefferson
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1743
      </td>
      <td
        style="width: 80px;"
      >
        1826
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1801-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1809-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        4
      </td>
      <td
        style="width: 140px;"
      >
        James Madison
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1751
      </td>
      <td
        style="width: 80px;"
      >
        1836
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1809-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1817-03-04
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`withInternalSorting tests change sort from props 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div
          style="padding-right: 15px; position: relative;"
        >
          number 
          <span
            class="sort-desc"
            style="width: 0px; height: 0px; border-left: 5px solid transparent; border-right: 5px solid transparent; position: absolute; margin-left: 5px; border-top: 5px solid gray;"
          />
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 140px;"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 120px;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align: right; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div
          style="padding-right: 15px;"
        >
          took_office
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="width: 80px;"
      >
        5
      </td>
      <td
        style="width: 140px;"
      >
        James Monroe
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1758
      </td>
      <td
        style="width: 80px;"
      >
        1831
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1817-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1825-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        4
      </td>
      <td
        style="width: 140px;"
      >
        James Madison
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1751
      </td>
      <td
        style="width: 80px;"
      >
        1836
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1809-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1817-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        3
      </td>
      <td
        style="width: 140px;"
      >
        Thomas Jefferson
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1743
      </td>
      <td
        style="width: 80px;"
      >
        1826
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1801-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1809-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        2
      </td>
      <td
        style="width: 140px;"
      >
        John Adams
      </td>
      <td
        style="width: 120px;"
      >
        Federalist
      </td>
      <td
        style="width: 80px;"
      >
        1735
      </td>
      <td
        style="width: 80px;"
      >
        1826
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1797-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1801-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        1
      </td>
      <td
        style="width: 140px;"
      >
        George Washington
      </td>
      <td
        style="width: 120px;"
      >
        No Party
      </td>
      <td
        style="width: 80px;"
      >
        1732
      </td>
      <td
        style="width: 80px;"
      >
        1799
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1789-04-30
      </td>
      <td
        style="width: 80px;"
      >
        1797-03-04
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`withInternalSorting tests change sort on th click 1`] = `
<th
  style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
>
  <div
    style="padding-right: 15px; position: relative;"
  >
    number 
    <span
      class="sort-asc"
      style="width: 0px; height: 0px; border-left: 5px solid transparent; border-right: 5px solid transparent; border-bottom: 5px solid gray; position: absolute; margin-left: 5px;"
    />
  </div>
</th>
`;

exports[`withInternalSorting tests change sort on th click 2`] = `
<th
  style="text-align: left; white-space: nowrap; cursor: pointer; width: 140px;"
>
  <div>
    name
  </div>
</th>
`;

exports[`withInternalSorting tests change sort on th click 3`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div
          style="padding-right: 15px; position: relative;"
        >
          number 
          <span
            class="sort-asc"
            style="width: 0px; height: 0px; border-left: 5px solid transparent; border-right: 5px solid transparent; border-bottom: 5px solid gray; position: absolute; margin-left: 5px;"
          />
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 140px;"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 120px;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align: right; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div
          style="padding-right: 15px;"
        >
          took_office
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="width: 80px;"
      >
        1
      </td>
      <td
        style="width: 140px;"
      >
        George Washington
      </td>
      <td
        style="width: 120px;"
      >
        No Party
      </td>
      <td
        style="width: 80px;"
      >
        1732
      </td>
      <td
        style="width: 80px;"
      >
        1799
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1789-04-30
      </td>
      <td
        style="width: 80px;"
      >
        1797-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        2
      </td>
      <td
        style="width: 140px;"
      >
        John Adams
      </td>
      <td
        style="width: 120px;"
      >
        Federalist
      </td>
      <td
        style="width: 80px;"
      >
        1735
      </td>
      <td
        style="width: 80px;"
      >
        1826
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1797-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1801-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        3
      </td>
      <td
        style="width: 140px;"
      >
        Thomas Jefferson
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1743
      </td>
      <td
        style="width: 80px;"
      >
        1826
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1801-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1809-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        4
      </td>
      <td
        style="width: 140px;"
      >
        James Madison
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1751
      </td>
      <td
        style="width: 80px;"
      >
        1836
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1809-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1817-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        5
      </td>
      <td
        style="width: 140px;"
      >
        James Monroe
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1758
      </td>
      <td
        style="width: 80px;"
      >
        1831
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1817-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1825-03-04
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`withInternalSorting tests change sort on th click 4`] = `
<th
  style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
>
  <div
    style="padding-right: 15px;"
  >
    number
  </div>
</th>
`;

exports[`withInternalSorting tests change sort on th click 5`] = `
<th
  style="text-align: left; white-space: nowrap; cursor: pointer; width: 140px;"
>
  <div
    style="padding-right: 15px; position: relative;"
  >
    name 
    <span
      class="sort-asc"
      style="width: 0px; height: 0px; border-left: 5px solid transparent; border-right: 5px solid transparent; border-bottom: 5px solid gray; position: absolute; margin-left: 5px;"
    />
  </div>
</th>
`;

exports[`withInternalSorting tests change sort on th click 6`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div
          style="padding-right: 15px;"
        >
          number
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 140px;"
      >
        <div
          style="padding-right: 15px; position: relative;"
        >
          name 
          <span
            class="sort-asc"
            style="width: 0px; height: 0px; border-left: 5px solid transparent; border-right: 5px solid transparent; border-bottom: 5px solid gray; position: absolute; margin-left: 5px;"
          />
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 120px;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align: right; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div
          style="padding-right: 15px;"
        >
          took_office
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; cursor: pointer; width: 80px;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="width: 80px;"
      >
        1
      </td>
      <td
        style="width: 140px;"
      >
        George Washington
      </td>
      <td
        style="width: 120px;"
      >
        No Party
      </td>
      <td
        style="width: 80px;"
      >
        1732
      </td>
      <td
        style="width: 80px;"
      >
        1799
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1789-04-30
      </td>
      <td
        style="width: 80px;"
      >
        1797-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        4
      </td>
      <td
        style="width: 140px;"
      >
        James Madison
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1751
      </td>
      <td
        style="width: 80px;"
      >
        1836
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1809-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1817-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        5
      </td>
      <td
        style="width: 140px;"
      >
        James Monroe
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1758
      </td>
      <td
        style="width: 80px;"
      >
        1831
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1817-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1825-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        2
      </td>
      <td
        style="width: 140px;"
      >
        John Adams
      </td>
      <td
        style="width: 120px;"
      >
        Federalist
      </td>
      <td
        style="width: 80px;"
      >
        1735
      </td>
      <td
        style="width: 80px;"
      >
        1826
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1797-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1801-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        3
      </td>
      <td
        style="width: 140px;"
      >
        Thomas Jefferson
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1743
      </td>
      <td
        style="width: 80px;"
      >
        1826
      </td>
      <td
        style="padding-right: 23px; width: 80px; text-align: right;"
      >
        1801-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1809-03-04
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`withInternalSorting tests sorting with custom cellcomponent 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align:right;white-space:nowrap;cursor:pointer;width:80px"
      >
        <div
          style="padding-right:15px;position:relative"
        >
          number 
          <span
            class="sort-asc"
            style="width:0;height:0;border-left:5px solid transparent;border-right:5px solid transparent;border-bottom:5px solid gray;position:absolute;top:calc(50% - 3px);margin-left:5px"
          />
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;cursor:pointer;width:140px"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;cursor:pointer;width:120px"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;cursor:pointer;width:80px"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;cursor:pointer;width:80px"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align:right;white-space:nowrap;cursor:pointer;width:80px"
      >
        <div
          style="padding-right:15px"
        >
          took_office
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;cursor:pointer;width:80px"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="padding-right:23px;width:80px;text-align:right"
      >
        <span>
          1
        </span>
      </td>
      <td
        style="width:140px"
      >
        George Washington
      </td>
      <td
        style="width:120px"
      >
        No Party
      </td>
      <td
        style="width:80px"
      >
        1732
      </td>
      <td
        style="width:80px"
      >
        1799
      </td>
      <td
        style="padding-right:23px;width:80px;text-align:right"
      >
        1789-04-30
      </td>
      <td
        style="width:80px"
      >
        1797-03-04
      </td>
    </tr>
    <tr>
      <td
        style="padding-right:23px;width:80px;text-align:right"
      >
        <span>
          2
        </span>
      </td>
      <td
        style="width:140px"
      >
        John Adams
      </td>
      <td
        style="width:120px"
      >
        Federalist
      </td>
      <td
        style="width:80px"
      >
        1735
      </td>
      <td
        style="width:80px"
      >
        1826
      </td>
      <td
        style="padding-right:23px;width:80px;text-align:right"
      >
        1797-03-04
      </td>
      <td
        style="width:80px"
      >
        1801-03-04
      </td>
    </tr>
    <tr>
      <td
        style="padding-right:23px;width:80px;text-align:right"
      >
        <span>
          3
        </span>
      </td>
      <td
        style="width:140px"
      >
        Thomas Jefferson
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1743
      </td>
      <td
        style="width:80px"
      >
        1826
      </td>
      <td
        style="padding-right:23px;width:80px;text-align:right"
      >
        1801-03-04
      </td>
      <td
        style="width:80px"
      >
        1809-03-04
      </td>
    </tr>
    <tr>
      <td
        style="padding-right:23px;width:80px;text-align:right"
      >
        <span>
          4
        </span>
      </td>
      <td
        style="width:140px"
      >
        James Madison
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1751
      </td>
      <td
        style="width:80px"
      >
        1836
      </td>
      <td
        style="padding-right:23px;width:80px;text-align:right"
      >
        1809-03-04
      </td>
      <td
        style="width:80px"
      >
        1817-03-04
      </td>
    </tr>
    <tr>
      <td
        style="padding-right:23px;width:80px;text-align:right"
      >
        <span>
          5
        </span>
      </td>
      <td
        style="width:140px"
      >
        James Monroe
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1758
      </td>
      <td
        style="width:80px"
      >
        1831
      </td>
      <td
        style="padding-right:23px;width:80px;text-align:right"
      >
        1817-03-04
      </td>
      <td
        style="width:80px"
      >
        1825-03-04
      </td>
    </tr>
  </tbody>
</table>
`;
